--- a/todo.txt
+++ b/todo.txt
@@ -3,9 +3,10 @@ belly dance
 water palm
 play hide and seek
 cherry blossom
-Shampoo
 clean cat litter
 walk bobo
 fix computfix computertake the car to carmax
 boling water
 vacuum 
+tell Bobo do not yell
+
